kubeyamls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-demo-app
  template:
    metadata:
      labels:
        app: flask-demo-app
    spec:
      containers:
      - name: flask-demo-app
        image: ibrezm1/flask-demo-app:1.0.0
        ports:
        - containerPort: 5000
