kubeyamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-demo-app-service
spec:
  type: NodePort
  selector:
    app: flask-demo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
